--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 22:05:02 2018</p>
+         Last Run: Sun Nov 18 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -38,31 +38,31 @@
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>3</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>3</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>2</td>
                         <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>3</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>3</td>
-                        <td>69</td>
+                        <td>2</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>3</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-4",
+                 "-3",
                  "-4"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "0",
-                 "-1",
+                 "0",
                  "-1"
                ]
              }
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "3",
-                 "3",
-                 "3"
+                 "2",
+                 "2"
                ]
              },
              {
@@ -173,7 +173,7 @@
                "data":[
                  "66",
                  "69",
-                 "69"
+                 "68"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "3",
-                 "3",
-                 "3"
+                 "12",
+                 "11",
+                 "14"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 22:05:02 2018</p>
+         Last Run: Sun Nov 18 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -248,36 +248,36 @@
                         <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
-                        <td>0</td>
-                        <td>51</td>
+                        <td>1</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>47</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
-                        <td>0</td>
-                        <td>54</td>
+                        <td>1</td>
+                        <td>-3</td>
+                        <td>1</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>44</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
+                        <td>0</td>
+                        <td>-4</td>
                         <td>1</td>
-                        <td>-3</td>
-                        <td>1</td>
-                        <td>57</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SSW</td>
-                        <td>41</td>
+                        <td>48</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,8 +305,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "-2",
-                 "-3"
+                 "-3",
+                 "-4"
                ]
              },
              {
@@ -317,8 +317,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "2",
-                 "2",
-                 "1"
+                 "1",
+                 "0"
                ]
              }
            ]
@@ -375,8 +375,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
-                 "0",
+                 "1",
+                 "1",
                  "1"
                ]
              },
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "54",
-                 "57"
+                 "52",
+                 "55",
+                 "58"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "47",
-                 "44",
-                 "41"
+                 "56",
+                 "53",
+                 "48"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 22:05:02 2018</p>
+         Last Run: Sun Nov 18 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -460,15 +460,15 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-3</td>
-                        <td>-6</td>
+                        <td>-7</td>
                         <td>6</td>
-                        <td>72</td>
-                        <td>1</td>
-                        <td>8</td>
-                        <td>NE</td>
-                        <td>71</td>
+                        <td>73</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>SSE</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -478,33 +478,33 @@
                         <td>6</td>
                         <td>68</td>
                         <td>1</td>
-                        <td>10</td>
-                        <td>E</td>
-                        <td>63</td>
+                        <td>11</td>
+                        <td>ESE</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
                         <td>6</td>
-                        <td>63</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>54</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>6</td>
-                        <td>63</td>
+                        <td>7</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>ESE</td>
-                        <td>45</td>
+                        <td>E</td>
+                        <td>55</td>
                      </tr>
                   </tbody>
                </table>
@@ -532,7 +532,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
+                 "-7",
                  "-6",
                  "-6",
                  "-6"
@@ -609,7 +609,7 @@
                  "6",
                  "6",
                  "6",
-                 "6"
+                 "7"
                ]
              },
              {
@@ -618,10 +618,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
+                 "73",
                  "68",
-                 "63",
-                 "63"
+                 "64",
+                 "64"
                ]
              },
              {
@@ -630,10 +630,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "71",
-                 "63",
-                 "54",
-                 "45"
+                 "80",
+                 "74",
+                 "64",
+                 "55"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 22:05:02 2018</p>
+         Last Run: Sun Nov 18 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -694,39 +694,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>2</td>
-                        <td>60</td>
+                        <td>3</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>26</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>2</td>
-                        <td>57</td>
+                        <td>3</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>22</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>8</td>
-                        <td>55</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>21</td>
+                        <td>WNW</td>
+                        <td>39</td>
                      </tr>
                   </tbody>
                </table>
@@ -824,8 +824,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
+                 "3",
+                 "3",
                  "8"
                ]
              },
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "60",
-                 "57",
-                 "55"
+                 "62",
+                 "59",
+                 "57"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "26",
-                 "22",
-                 "21"
+                 "40",
+                 "40",
+                 "39"
                ]
              }
            ]
