--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 00:05:02 2018</p>
+         Last Run: Mon Nov 19 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -32,37 +32,37 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>0</td>
-                        <td>-4</td>
-                        <td>2</td>
-                        <td>66</td>
+                        <td>-3</td>
+                        <td>3</td>
+                        <td>68</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>11</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>0</td>
-                        <td>-4</td>
-                        <td>2</td>
-                        <td>67</td>
+                        <td>-3</td>
+                        <td>3</td>
+                        <td>69</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>W</td>
                         <td>10</td>
+                        <td>W</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>2</td>
-                        <td>67</td>
+                        <td>3</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
-                        <td>13</td>
+                        <td>WSW</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
-                 "-4",
+                 "-3",
+                 "-3",
                  "-4"
                ]
              },
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
-                 "2"
+                 "3",
+                 "3",
+                 "3"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
-                 "67",
-                 "67"
+                 "68",
+                 "69",
+                 "69"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
-                 "10",
-                 "13"
+                 "16",
+                 "15",
+                 "17"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 00:05:02 2018</p>
+         Last Run: Mon Nov 19 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -246,14 +246,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>3</td>
-                        <td>-1</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>1</td>
                         <td>52</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>56</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -265,7 +265,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
-                        <td>52</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>58</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SSW</td>
-                        <td>47</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
+                 "-2",
                  "-2",
                  "-3"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "3",
+                 "2",
                  "2",
                  "1"
                ]
@@ -388,7 +388,7 @@
                "data":[
                  "52",
                  "56",
-                 "58"
+                 "59"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
-                 "52",
-                 "47"
+                 "57",
+                 "54",
+                 "49"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 00:05:02 2018</p>
+         Last Run: Mon Nov 19 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -460,15 +460,15 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
                         <td>6</td>
-                        <td>73</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>80</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -476,10 +476,10 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>6</td>
-                        <td>68</td>
+                        <td>66</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>ESE</td>
+                        <td>SSE</td>
                         <td>73</td>
                      </tr>
                      <tr>
@@ -488,22 +488,22 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>6</td>
-                        <td>64</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>E</td>
+                        <td>SE</td>
                         <td>64</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-1</td>
-                        <td>-4</td>
-                        <td>7</td>
-                        <td>64</td>
+                        <td>-5</td>
+                        <td>8</td>
+                        <td>63</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>E</td>
+                        <td>11</td>
+                        <td>ESE</td>
                         <td>55</td>
                      </tr>
                   </tbody>
@@ -535,7 +535,7 @@
                  "-7",
                  "-6",
                  "-4",
-                 "-4"
+                 "-5"
                ]
              },
              {
@@ -609,7 +609,7 @@
                  "6",
                  "6",
                  "6",
-                 "7"
+                 "8"
                ]
              },
              {
@@ -618,10 +618,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "73",
-                 "68",
-                 "64",
-                 "64"
+                 "71",
+                 "66",
+                 "62",
+                 "63"
                ]
              },
              {
@@ -630,7 +630,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
+                 "79",
                  "73",
                  "64",
                  "55"
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 00:05:02 2018</p>
+         Last Run: Mon Nov 19 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -695,14 +695,14 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>3</td>
                         <td>65</td>
                         <td>1</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>41</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -713,8 +713,8 @@
                         <td>62</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>W</td>
-                        <td>40</td>
+                        <td>WNW</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -724,7 +724,7 @@
                         <td>4</td>
                         <td>60</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WNW</td>
                         <td>40</td>
                      </tr>
@@ -753,7 +753,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
+                 "-4",
                  "-3",
                  "-3"
                ]
@@ -765,7 +765,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "0",
                  "0"
                ]
@@ -846,8 +846,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "41",
-                 "40",
+                 "47",
+                 "44",
                  "40"
                ]
              }
