--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 01:05:02 2018</p>
+         Last Run: Mon Nov 19 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 01:05:02 2018</p>
+         Last Run: Mon Nov 19 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -273,7 +273,7 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>59</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SSW</td>
@@ -388,7 +388,7 @@
                "data":[
                  "52",
                  "56",
-                 "59"
+                 "60"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 01:05:02 2018</p>
+         Last Run: Mon Nov 19 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
                <table class="table table-striped">
@@ -463,48 +463,48 @@
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>6</td>
-                        <td>71</td>
-                        <td>0</td>
+                        <td>4</td>
+                        <td>72</td>
+                        <td>1</td>
                         <td>10</td>
-                        <td>SSE</td>
-                        <td>79</td>
+                        <td>N</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>6</td>
+                        <td>4</td>
                         <td>66</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>SSE</td>
-                        <td>73</td>
+                        <td>E</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-1</td>
-                        <td>-4</td>
-                        <td>6</td>
+                        <td>-5</td>
+                        <td>4</td>
                         <td>62</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>SE</td>
-                        <td>64</td>
+                        <td>11</td>
+                        <td>E</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-1</td>
-                        <td>-5</td>
-                        <td>8</td>
+                        <td>-4</td>
+                        <td>6</td>
                         <td>63</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>ESE</td>
-                        <td>55</td>
+                        <td>39</td>
                      </tr>
                   </tbody>
                </table>
@@ -534,8 +534,8 @@
                "data":[
                  "-7",
                  "-6",
-                 "-4",
-                 "-5"
+                 "-5",
+                 "-4"
                ]
              },
              {
@@ -606,10 +606,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
-                 "6",
-                 "6",
-                 "8"
+                 "4",
+                 "4",
+                 "4",
+                 "6"
                ]
              },
              {
@@ -618,7 +618,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
+                 "72",
                  "66",
                  "62",
                  "63"
@@ -630,10 +630,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "79",
-                 "73",
-                 "64",
-                 "55"
+                 "62",
+                 "48",
+                 "40",
+                 "39"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 19 01:05:02 2018</p>
+         Last Run: Mon Nov 19 02:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -710,7 +710,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>62</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>10</td>
                         <td>WNW</td>
@@ -722,7 +722,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>4</td>
-                        <td>60</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WNW</td>
@@ -836,8 +836,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "65",
-                 "62",
-                 "60"
+                 "61",
+                 "59"
                ]
              },
              {
